--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 venv-hf-asr/
-indonesian-w2v/malay-synthetic
-indonesian-w2v/english-synthetic
-indonesian-w2v/malay-youtube
+indonesian-w2v/malay-synthetic/*
+indonesian-w2v/english-synthetic/*
+indonesian-w2v/malay-youtube/*
